#2 fix upload avatar
